--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 p{
     font-style: oblique;
-    color: rgb(154, 31, 236);
+    color: black;
+    
 }
 h1
 {
@@ -14,11 +15,37 @@ h1
     font-family:Arial, Helvetica, sans-serif;
 }
 
-menu{
-    color: aqua;
+.menu{   
+    color: tomato;
+    display: flex;
+    justify-content: space-around;
+}
+.menu img
+{
+    width: 30%;
 }
 .photo
 {
     border-radius: 30%;
+    width: 30%;
+    height: 20%;
  
+}
+.body
+{
+    background-color: rgba(151, 67, 7, 0.425);
+    align-content: end;
+}
+.home
+{
+    color: aliceblue;
+}
+.end
+{
+   background-color: rgb(66, 21, 0);
+   
+}
+.end1
+{
+    color: aliceblue;
 }
